practica2.4/ControlLangParser.py
# Generated from ControlLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ControlLangParser ( Parser ):

    grammarFileName = "ControlLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'switch'", 
                     "'case'", "':'", "'default'", "'('", "')'", "'{'", 
                     "'}'", "'='", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", 
                     "'=='", "'!='", "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "SWITCH", "CASE", 
                      "COLON", "DEFAULT", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", 
                      "GT", "LT", "EQ", "NEQ", "SEMI", "ID", "INT", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_ifElseStmt = 2
    RULE_switchStmt = 3
    RULE_forStmt = 4
    RULE_condicion = 5
    RULE_asignacion = 6
    RULE_expresion = 7

    ruleNames =  [ "programa", "sentencia", "ifElseStmt", "switchStmt", 
                   "forStmt", "condicion", "asignacion", "expresion" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    SWITCH=4
    CASE=5
    COLON=6
    DEFAULT=7
    LPAREN=8
    RPAREN=9
    LBRACE=10
    RBRACE=11
    ASSIGN=12
    PLUS=13
    MINUS=14
    MUL=15
    DIV=16
    GT=17
    LT=18
    EQ=19
    NEQ=20
    SEMI=21
    ID=22
    INT=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ControlLangParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.SentenciaContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.SEMI)
            else:
                return self.getToken(ControlLangParser.SEMI, i)

        def getRuleIndex(self):
            return ControlLangParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = ControlLangParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 16
                self.sentencia()
                self.state = 17
                self.match(ControlLangParser.SEMI)
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4194330) != 0)):
                    break

            self.state = 23
            self.match(ControlLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifElseStmt(self):
            return self.getTypedRuleContext(ControlLangParser.IfElseStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(ControlLangParser.SwitchStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(ControlLangParser.ForStmtContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(ControlLangParser.AsignacionContext,0)


        def getRuleIndex(self):
            return ControlLangParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = ControlLangParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.ifElseStmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.switchStmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.forStmt()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.asignacion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_ifElseStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfElseContext(IfElseStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.IfElseStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ControlLangParser.IF, 0)
        def LPAREN(self):
            return self.getToken(ControlLangParser.LPAREN, 0)
        def condicion(self):
            return self.getTypedRuleContext(ControlLangParser.CondicionContext,0)

        def RPAREN(self):
            return self.getToken(ControlLangParser.RPAREN, 0)
        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.LBRACE)
            else:
                return self.getToken(ControlLangParser.LBRACE, i)
        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.RBRACE)
            else:
                return self.getToken(ControlLangParser.RBRACE, i)
        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.SentenciaContext,i)

        def ELSE(self):
            return self.getToken(ControlLangParser.ELSE, 0)
        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.SEMI)
            else:
                return self.getToken(ControlLangParser.SEMI, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElse" ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElse" ):
                listener.exitIfElse(self)



    def ifElseStmt(self):

        localctx = ControlLangParser.IfElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifElseStmt)
        self._la = 0 # Token type
        try:
            localctx = ControlLangParser.IfElseContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(ControlLangParser.IF)
            self.state = 32
            self.match(ControlLangParser.LPAREN)
            self.state = 33
            self.condicion()
            self.state = 34
            self.match(ControlLangParser.RPAREN)
            self.state = 35
            self.match(ControlLangParser.LBRACE)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4194330) != 0):
                self.state = 36
                self.sentencia()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 37
                    self.match(ControlLangParser.SEMI)


                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(ControlLangParser.RBRACE)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 46
                self.match(ControlLangParser.ELSE)
                self.state = 47
                self.match(ControlLangParser.LBRACE)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4194330) != 0):
                    self.state = 48
                    self.sentencia()
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==21:
                        self.state = 49
                        self.match(ControlLangParser.SEMI)


                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 57
                self.match(ControlLangParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_switchStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForContext(SwitchStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.SwitchStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SWITCH(self):
            return self.getToken(ControlLangParser.SWITCH, 0)
        def LPAREN(self):
            return self.getToken(ControlLangParser.LPAREN, 0)
        def ID(self):
            return self.getToken(ControlLangParser.ID, 0)
        def RPAREN(self):
            return self.getToken(ControlLangParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(ControlLangParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(ControlLangParser.RBRACE, 0)
        def CASE(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.CASE)
            else:
                return self.getToken(ControlLangParser.CASE, i)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.INT)
            else:
                return self.getToken(ControlLangParser.INT, i)
        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.COLON)
            else:
                return self.getToken(ControlLangParser.COLON, i)
        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.SentenciaContext,i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.SEMI)
            else:
                return self.getToken(ControlLangParser.SEMI, i)
        def DEFAULT(self):
            return self.getToken(ControlLangParser.DEFAULT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)



    def switchStmt(self):

        localctx = ControlLangParser.SwitchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_switchStmt)
        self._la = 0 # Token type
        try:
            localctx = ControlLangParser.ForContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ControlLangParser.SWITCH)
            self.state = 61
            self.match(ControlLangParser.LPAREN)
            self.state = 62
            self.match(ControlLangParser.ID)
            self.state = 63
            self.match(ControlLangParser.RPAREN)
            self.state = 64
            self.match(ControlLangParser.LBRACE)
            self.state = 71 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 65
                    self.match(ControlLangParser.CASE)
                    self.state = 66
                    self.match(ControlLangParser.INT)
                    self.state = 67
                    self.match(ControlLangParser.COLON)
                    self.state = 68
                    self.sentencia()
                    self.state = 69
                    self.match(ControlLangParser.SEMI)

                else:
                    raise NoViableAltException(self)
                self.state = 73 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 75
                self.match(ControlLangParser.DEFAULT)
                self.state = 76
                self.match(ControlLangParser.COLON)
                self.state = 77
                self.sentencia()
                self.state = 78
                self.match(ControlLangParser.SEMI)


            self.state = 82
            self.match(ControlLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_forStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SwitchContext(ForStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ForStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(ControlLangParser.FOR, 0)
        def LPAREN(self):
            return self.getToken(ControlLangParser.LPAREN, 0)
        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.AsignacionContext,i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ControlLangParser.SEMI)
            else:
                return self.getToken(ControlLangParser.SEMI, i)
        def condicion(self):
            return self.getTypedRuleContext(ControlLangParser.CondicionContext,0)

        def RPAREN(self):
            return self.getToken(ControlLangParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(ControlLangParser.LBRACE, 0)
        def sentencia(self):
            return self.getTypedRuleContext(ControlLangParser.SentenciaContext,0)

        def RBRACE(self):
            return self.getToken(ControlLangParser.RBRACE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitch" ):
                listener.enterSwitch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitch" ):
                listener.exitSwitch(self)



    def forStmt(self):

        localctx = ControlLangParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_forStmt)
        try:
            localctx = ControlLangParser.SwitchContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(ControlLangParser.FOR)
            self.state = 85
            self.match(ControlLangParser.LPAREN)
            self.state = 86
            self.asignacion()
            self.state = 87
            self.match(ControlLangParser.SEMI)
            self.state = 88
            self.condicion()
            self.state = 89
            self.match(ControlLangParser.SEMI)
            self.state = 90
            self.asignacion()
            self.state = 91
            self.match(ControlLangParser.RPAREN)
            self.state = 92
            self.match(ControlLangParser.LBRACE)
            self.state = 93
            self.sentencia()
            self.state = 94
            self.match(ControlLangParser.SEMI)
            self.state = 95
            self.match(ControlLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_condicion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondicionSimpleContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.CondicionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ControlLangParser.ID, 0)
        def INT(self):
            return self.getToken(ControlLangParser.INT, 0)
        def GT(self):
            return self.getToken(ControlLangParser.GT, 0)
        def LT(self):
            return self.getToken(ControlLangParser.LT, 0)
        def EQ(self):
            return self.getToken(ControlLangParser.EQ, 0)
        def NEQ(self):
            return self.getToken(ControlLangParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionSimple" ):
                listener.enterCondicionSimple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionSimple" ):
                listener.exitCondicionSimple(self)



    def condicion(self):

        localctx = ControlLangParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            localctx = ControlLangParser.CondicionSimpleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ControlLangParser.ID)
            self.state = 98
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 99
            self.match(ControlLangParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_asignacion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignContext(AsignacionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.AsignacionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ControlLangParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(ControlLangParser.ASSIGN, 0)
        def expresion(self):
            return self.getTypedRuleContext(ControlLangParser.ExpresionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)



    def asignacion(self):

        localctx = ControlLangParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asignacion)
        try:
            localctx = ControlLangParser.AssignContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ControlLangParser.ID)
            self.state = 102
            self.match(ControlLangParser.ASSIGN)
            self.state = 103
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ControlLangParser.RULE_expresion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class VariableContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ControlLangParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)


    class MulDivContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExpresionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.ExpresionContext,i)

        def MUL(self):
            return self.getToken(ControlLangParser.MUL, 0)
        def DIV(self):
            return self.getToken(ControlLangParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)


    class AddSubContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExpresionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ControlLangParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ControlLangParser.ExpresionContext,i)

        def PLUS(self):
            return self.getToken(ControlLangParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(ControlLangParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class ParensContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ControlLangParser.LPAREN, 0)
        def expresion(self):
            return self.getTypedRuleContext(ControlLangParser.ExpresionContext,0)

        def RPAREN(self):
            return self.getToken(ControlLangParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)


    class IntContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ControlLangParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ControlLangParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)



    def expresion(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ControlLangParser.ExpresionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expresion, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                localctx = ControlLangParser.IntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 106
                self.match(ControlLangParser.INT)
                pass
            elif token in [22]:
                localctx = ControlLangParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 107
                self.match(ControlLangParser.ID)
                pass
            elif token in [8]:
                localctx = ControlLangParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 108
                self.match(ControlLangParser.LPAREN)
                self.state = 109
                self.expresion(0)
                self.state = 110
                self.match(ControlLangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 120
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = ControlLangParser.MulDivContext(self, ControlLangParser.ExpresionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 114
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 115
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==15 or _la==16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.expresion(6)
                        pass

                    elif la_ == 2:
                        localctx = ControlLangParser.AddSubContext(self, ControlLangParser.ExpresionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 117
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 118
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==13 or _la==14):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 119
                        self.expresion(5)
                        pass

             
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.expresion_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expresion_sempred(self, localctx:ExpresionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         




